testing CLS Optimization

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="overlay">
-        <img alt="Overlay" id="overlay-image" class="overlay-image" style="display: none;">
+        <img alt="Overlay" id="overlay-image" class="overlay-image" style="display: none;" width="120" height="120">
 
         <div id="result" class="score-overlay" style="display: none;">
             <div id="match-result"></div>
@@ -21,7 +21,7 @@
         <div id="firstInnings" class="score-overlay">
 
             <div class="batting-team-info">
-                <img id="batting-team-logo" class="team-logo" alt="Team Logo">
+                <img id="batting-team-logo" class="team-logo" alt="Team Logo" width="60" height="60">
             </div>
 
             <div class="batsman-info" id="batsman-info">
@@ -59,7 +59,7 @@
             </div>
 
             <div class="bowling-team-info">
-                <img id="bowling-team-logo" class="team-logo" alt="Team Logo">
+                <img id="bowling-team-logo" class="team-logo" alt="Team Logo" width="60" height="60">
             </div>
 
         </div>
